# 3bp

./: CMakeLists.txt  README.md
cmake/modules/: FindRapidXML.cmake
include/: Collision.h  DirectionMeter.h  Dynamics.h  FuelMeter.h  Game.h  HUDItem.h  IHUDItem.h  MassiveMovable.h  Minimap.h  Movable.h  MovableCreator.h  Player.h  ScreenMovement.h  Util.h
resource/data/movable/: spaceship.xml
src/: Collision.cpp  DirectionMeter.cpp  Dynamics.cpp  FuelMeter.cpp  Game.cpp  MassiveMovable.cpp  Minimap.cpp  Movable.cpp  MovableCreator.cpp  RunTests.cpp  ScreenMovement.cpp  first_tests.cpp  main.cpp
src/Test/: CollisionTest.cpp  DynamicsTest.cpp
src/test/: GameTest.cpp  PlayerTests.cpp
